reviews now have max score of 5; fixed alignment between rating box and caption box

--- a/client/components/SingleMentee/SingleMentee.module.css
+++ b/client/components/SingleMentee/SingleMentee.module.css
@@ -85,12 +85,10 @@ p{
   padding-bottom: 30px
 }
 .scoreContainer{
-  display:flex;
-padding-top:40px;
-min-height:80px;
-}
-.scoreIcons{
-  padding-top:20px;
+  display:inline-flex;
+  align-items:center;
+  padding-top:40px;
+  min-height:80px;
 }
 .scoreLabels{
   font-size:smaller;
